@@ -348,13 +348,21 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_method_text a		{color:#000; font-weight:bold;}
 .search_method_text a:hover	{color:#000; text-decoration:underline;}
 
-.search_glossary_wrap		{margin-top:10px; position:relative; width:960px; margin:0 auto;}
-.search_glossary			{padding:20px 30px; box-sizing:border-box; width:960px; margin:0 auto; border:1px solid #000; font-size:1.1em; line-height:1.5em; margin-bottom:15px;}
+.search_glossary_wrap		{position:relative; width:960px; margin:0 auto; margin-top:-10px;}
+.default.min .search_glossary_wrap		{margin:0;}
+.search_glossary				{padding:20px 30px; box-sizing:border-box; width:960px; margin:0 auto; background-color:#fff; border:1px solid #000; font-size:1.1em; line-height:1.5em; margin-bottom:15px;}
 .search_glossary_wrap p			{padding:25px 0;}
 .search_glossary_wrap td		{padding:0;}
 .search_glossary_wrap td ul		{list-style-type:disc; list-style-position:outside;}
 .search_glossary_wrap td ul li	{padding:10px 20px 10px 0;}
-.search_glossary_wrap td a:hover{text-decoration:underline;}
+.search_glossary_wrap th a,
+.search_glossary_wrap td a		{color:#000;}
+.search_glossary_wrap th a:hover,
+.search_glossary_wrap td a:hover{border-bottom:1px solid #000;}
+
+.filter_text				{color:#000;}
+.search_help span			{display:inline-block; margin-right:15px; background-color:#fff; padding:5px; border:1px solid #000; border-bottom:0; border-radius:4px 4px 0 0; font-size:13px; font-weight:normal; min-width:65px; text-align:center;}
+.search_help span:hover		{cursor:pointer; background-color:#E2E2E2;}
 
 .settings_link_search span	{color:#000; padding:30px 0 0 0; display:inline-block;}
 .search_intro_wrap			{width:960px; margin:0 auto; margin-top:40px; color:#000; font-size:20px; line-height:26px;}
