@@ -158,6 +158,22 @@ a#search_link:hover			{background-color:rgba(255,163,0,1);}
 
 .search_title				{color:rgba(255,163,0,1);}
 
+
+/*	Search section on all pages	*
+	============================================= */
+.search_glossary			{background-color:rgba(15,15,15,0.7);}
+.search_glossary_wrap th a,
+.search_glossary_wrap td a		{color:rgba(255,163,0,1);}
+.search_glossary_wrap th a:hover,
+.search_glossary_wrap td a:hover{border-bottom:1px solid rgba(255,163,0,1);}
+
+.filter_text				{color:rgba(255,255,255,1); border-bottom:1px solid rgba(56,56,56,1);}
+.search_help span			{background-color:rgba(15,15,15,0.7); color:rgba(153,153,153,1);}
+.search_help span:hover		{background-color:rgba(15,15,15,0.7); color:rgba(163,116,34,1);}
+
+table.filter_table td		{border-top:1px solid rgba(56,56,56,1);}
+
+
 /*	For url #view=list_activities	*
 	============================================= */
 .activities_spend			{color:rgba(218,218,218,1);}
@@ -174,8 +190,8 @@ a#search_link:hover			{background-color:rgba(255,163,0,1);}
 .search_cont a:active		{color:rgba(206,131,0,1);}
 .search.head				{color:rgba(255,255,255,1);}
 .search_query				{color:rgba(255,255,255,1);}
-a.search_refine				{border:0; text-shadow:initial; background:none; background-color:rgba(15,15,15,0.7);}
-a.search_refine:hover		{border:0; text-shadow:initial; background:rgba(15,15,15,1);}
+.search_cont a.search_refine		{border:0; text-shadow:initial; background:rgba(206,131,0,1); color:rgba(255,255,255,1);}
+.search_cont a.search_refine:hover	{border:0; text-shadow:initial; background:rgba(255,163,0,1);}
 
 
 /*	Table header styles
