@@ -173,7 +173,7 @@
 			</tr>
 			<tr>
 				<td>{search_year_txt}</td>
-				<td>Select the starting and/or ending year as the range for activities.</td>
+				<td>Select the starting and/or ending year as the range for activities. This looks at <a href="https://iatistandard.org/en/iati-standard/203/codelists/activitydatetype/" target="blank" rel="noopener noreferrer">actual and planned dates</a> for activities that take place during the min and max year; ie. activities that started before the end of the max year and ended after the start of the min year to get an overlap of the ranges.</td>
 			</tr>
 			<!--<tr>
 				<td>{search_keyword_txt}</td>
@@ -556,7 +556,7 @@
 			</tr>
 			<tr>
 				<td>{search_year_txt}</td>
-				<td>Select the starting and/or ending year as the range for activities.</td>
+				<td>Select the starting and/or ending year as the range for activities. This looks at <a href="https://iatistandard.org/en/iati-standard/203/codelists/activitydatetype/" target="blank" rel="noopener noreferrer">actual and planned dates</a> for activities that take place during the min and max year; ie. activities that started before the end of the max year and ended after the start of the min year to get an overlap of the ranges.</td>
 			</tr>
 			<tr>
 				<td>{search_external_txt}</td>
