@@ -1,3 +1,12 @@
+Development Portal (2021-02-25 shi)
+==============================
+Add Glossary button to search section on all pages
+Update Year Range glossary description
+Added link to Year Range reference
+Update css
+Update Print-Friendly and all theme css
+
+
 Development Portal (2021-02-10 shi)
 ==============================
 Fix rgba views for Generator
